improved handling of factors in "predict". Fixed a bug with gbm models (dismo) reported by Jane Elith. Also removes factor levels that are not in model for GLM (predictions become NA).
show(Spatial*) could have the order of the min max values wrong on linux due to prepended spaces by as.matrix in apply(x, 2, range). Reported by Barry Rowlingson. 

new argument to plotRGB to allow plotting whitespace around images.
The crs is now written to ncdf files, using proj4=" "
reclassify now keeps the layer names (suggested by Matthieu Stigler)
modal of a single layer now returns that layer with a warning instead of throwing an error (suggested by Ben Tupper)

--- 29-Jan-2019, version: 2.8-19

higher precision extract with weights for small polygons. See https://stackoverflow.com/questions/53854910/issue-with-estimating-weighted-mean-from-raster-for-a-polygon-shape-in-r/

fixed error with rasterize when counting overlapping polygons with holes, reported by Boris Leroy. See:
https://gis.stackexchange.com/questions/307770/inconsistencies-in-r-rasterize-polygons-packages-raster-and-sf

fixed sf to sp coercion problem for degenerate Spatial*DataFrame with zero variables. Problem reported by Jakub Nowasad https://github.com/rspatial/raster/issues/29

fixed SRTM download in getData (new URL) and uppercase issue reported by tatianic
https://github.com/rspatial/raster/issues/34
raster::isLonLat("+init=epsg:4326") now returns TRUE. Suggested by Mike Sumner https://github.com/rspatial/raster/issues/32

faster rasterization of polygons (introduced in previous versions, but, by mistake, was not used in most cases)

faster handling of GMT ncdf files by Mike Sumner
new argument "na.last" to "unique" suggsted by Marco Sciaini. https://github.com/rspatial/raster/issues/23 

crosstab for small objects returned a data.frame instead of a table with long=FALSE. Reported by Jakub Nowosad

Refined matching CF crs descriptions (in climate ncdf files) with proj, with suggestions from Paul Newell
